--- a/cmd/tools/acyclic.1
+++ b/cmd/tools/acyclic.1
@@ -53,7 +53,7 @@ the attributes of the reversed edge are lost.
 .PP
 Some edge attributes are non-symmetric, referring to either the head
 or tail node. At present, there is no mechanism or convention for
-for correctly switching or renaming these.
+correctly switching or renaming these.
 .SH AUTHORS
 Stephen C. North <north@research.att.com>
 .br
