Put quotes around use of RGB colors.

--- a/doc/dotguide/dotguide.tex
+++ b/doc/dotguide/dotguide.tex
@@ -540,7 +540,7 @@ which has the same format as RGB with an additional fourth hexadecimal
 number specifying alpha channel or transparency information.}
 (three hexadecimal number between 00 and FF, preceded by the character '\#').
 Thus, the values {\tt "orchid"}, {\tt "0.8396,0.4862,0.8549"} and
-{\tt \#DA70D6} are three ways to specify the same color.
+{\tt "\#DA70D6"} are three ways to specify the same color.
 The numerical forms are convenient for scripts or tools that
 automatically generate colors.
 Color name lookup is case-insensitive and ignores non-alphanumeric
