--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,25 @@
+December 10, 2009
+	- Release 2.26.0
+	- Core:
+		- added: "smyrna" - a new opengl-based viewer for large graphs
+		- added: "gml2gv", "gv2gml" converters
+		- extended support for various image formats in node images
+		- removed vestiges of codegens, now all putput formats supported
+ 		  through plugins.  Dropped some output formats for which
+		  plugins have not been developed: -Tdia, -Tmif
+	- Ports added/dropped from nightly builds:
+	  (The dropped ports could probably be re-added if there was demand.)
+		- added MacOSX SnowLeopard  (multiarch:  i386/x86_64/ppc)
+		- added Fedora 12 (i386, x86_64)
+		- added Fedora 13 (Rawhide) (i386, x86_64)
+		- dropped Fedora 7 (i386, x86_64)
+		- dropped Fedora 8 (i386, x86_64)
+		- dropped RHEL 3 (i386, x86_64, ia64)
+		- dropped Ubuntu 8 (i386)
+	- Fixed bugs:
+		1683, 1713, 1718, 1720, 1747, 1759, 1770, 1776, 1786,
+		1799, 1816, 1827,
+
 June 16, 2009
 	- Release 2.24.0
 	- Core:
